<resources>
    <string name="app_name" translatable="false">ITC-LMS Unofficial</string>

    <string name="hint_start_login">"Looks like you didn't logged in or the session was expired!\nLogin and enjoy this app now!"</string>
    <string name="button_start_login">Login to ITC-LMS</string>

    <string name="loading_default">Loading…</string>
    <string name="loading_check_account">Checking login state…</string>
    <string name="loading_information">Loading information…</string>
    <string name="loading_time_table">Loading timetable…</string>
    <string name="loading_course_detail">Loading course details…</string>
    <string name="loading_report_detail">Loading report details…</string>

    <string name="err_default">Something wrong happened!</string>
    <string name="err_page_not_loaded">Page is not loaded.</string>
    <string name="err_login_failed">Login failed.</string>

    <string name="snackbar_hint_restart">Back to top page?</string>
    <string name="snackbar_button_restart">Restart</string>
    <string name="snackbar_hint_re_login">If this loading screen won\'t close for a long time, maybe id or password is wrong.</string>
    <string name="snackbar_button_re_login">Retry</string>
    <string name="snackbar_fetching_attendance_send">Preparing for sending attendance…</string>
    <string name="snackbar_sending_attendance">Sending attendance…</string>
    <string name="snackbar_fetching_notify">Fetching notify…</string>
    <string name="snackbar_copied">URL copied!</string>

    <string name="button_dialog_cancel">Cancel</string>
    <string name="button_dialog_close">Close</string>
    <string name="button_dialog_download">Download</string>
    <string name="button_dialog_open">Open</string>
    <string name="button_dialog_send">Send</string>

    <string name="login_instruction">This application saves only cookies and won\'t save passwords.</string>
    <string name="login_hint_user_name">Username</string>
    <string name="input_error_password_wrong">Wrong password!</string>
    <string name="input_hint_password">Password</string>
    <string name="button_login">Login</string>

    <string name="course_temp">TEMP</string>

    <string name="button_send_attendance">Send attendance</string>

    <string name="dialog_title_send_attendance">Send attendance</string>
    <string name="input_hint_attendance_password">Attendance password</string>
    <string name="input_hint_attendance_comment">Comment</string>
    <string name="text_attendance_already_sent">The attendance for this class is already sent.</string>
    <string name="text_attendance_error">Some errors found.</string>

    <string name="dialog_message_bug_notify">Sorry for inconvenience. Because of the bug of ITC-LMS, you have to re-login to ITC-LMS. Currently we are trying to fix this issue, so please hold on.</string>
    <string name="dialog_message_open_link">Open this link?\n%s</string>
    <string name="dialog_message_open_video_unsupported">Sorry, watching video is not supported now.</string>
    <string name="dialog_message_send_attendance_success">Completed sending attendance. Now updating data…</string>
    <string name="dialog_tab_title_download_doc">Document</string>
    <string name="dialog_tab_title_download_tree">Dir &amp; File Name</string>
    <string name="dialog_title_bug_notify">Sorry! Problem happened while loading!</string>
    <string name="dialog_title_confirm_download">Download file</string>
    <string name="dialog_title_open_link">Open link</string>
    <string name="dialog_title_open_video">Watch video</string>
    <string name="dialog_title_pdf_require_password">This PDF requires password</string>
    <string name="dialog_title_send_attendance_success">Success</string>

    <string name="hint_icon_file">File</string>
    <string name="hint_icon_link">Link</string>
    <string name="hint_icon_video">Video</string>

    <string name="hint_icon_not_submitted">Not submitted</string>
    <string name="hint_icon_submitted_after_deadline">Submitted after deadline</string>
    <string name="hint_icon_submitted_in_time">Submitted in time</string>
    <string name="hint_icon_temporarily_saved">Temporarily saved</string>

    <string name="hint_icon_completed">Completed</string>
    <string name="hint_icon_has_answer">Has answer</string>
    <string name="hint_icon_waiting_for_answer">Waiting for answer</string>

    <string name="hint_icon_absent">Absent</string>
    <string name="hint_icon_late">Late</string>
    <string name="hint_icon_present">Present</string>

    <string name="hint_icon_not_taken">Not taken</string>
    <string name="hint_icon_taken">Taken</string>
    <string name="hint_icon_unknown">Unknown</string>

    <string name="hint_icon_attachment_file">Attachment file</string>
    <string name="hint_icon_feedback_file">Feedback file</string>
    <string name="hint_icon_report_file">Submitted file</string>

    <string name="hint_icon_late_submittable">Late submittable</string>
    <string name="hint_icon_not_late_submittable">Not late submittable</string>

    <string name="hint_delete_all_workers">Delete all workers</string>
    <string name="hint_open_attendances">Open attendances</string>
    <string name="hint_open_course_contents">Open course contents</string>
    <string name="hint_open_course_details">Open course details</string>
    <string name="hint_open_forums">Open forums</string>
    <string name="hint_open_materials">Open materials</string>
    <string name="hint_open_messages">Open messages</string>
    <string name="hint_open_notifies">Open notifies</string>
    <string name="hint_open_reports">Open reports</string>
    <string name="hint_open_surveys">Open surveys</string>
    <string name="hint_open_tests">Open tests</string>
    <string name="hint_start_task_now">Start task immediately</string>

    <string name="input_hint_file_name">File name</string>
    <string name="input_hint_target_dir">Directory</string>
    <string name="input_hint_target_doc">File path</string>
    <string name="input_hint_term">Term</string>
    <string name="input_hint_year">Year</string>

    <string name="menu_copy_url">Copy URL</string>
    <string name="menu_download">Download</string>
    <string name="menu_flush_tasks">Flush tasks</string>
    <string name="menu_open_in_browser">Open this page in browser</string>
    <string name="menu_share_url">Share URL of this page</string>

    <string name="pref_category_language">Language</string>
    <string name="pref_title_lms_language">ITC-LMS language</string>
    <string name="pref_text_lms_language">Language in ITC-LMS.\nThis settings could affect on/be affected by another browsers.</string>
    <string name="pref_category_login">Login</string>
    <string name="pref_title_logout">Logout</string>
    <string name="pref_text_logout">This removes cookies from application.</string>
    <string name="pref_title_automate_login">Automate login</string>
    <string name="pref_text_automate_login">This feature is NOT REQUIRED to use this application.\nWith this option enabled, this app will try to login using username/password when it loses the access to the server.\nYou should aware that there\'s a risk of your username/password stolen by malicious person, especially on rooted devices.\nUsername/password will be removed when this option is disabled.</string>

    <string name="text_period" translatable="false">%s / %s %d</string>
    <string name="text_time_span_single_line" translatable="false">%s ~ %s</string>
    <string name="text_time_span_multi_lines" translatable="false">%s\n~ %s</string>

    <string name="text_message_completed_by">Marked as completed by %s</string>
    <string name="text_message_got_answer_at">Received an answer at %s</string>
    <string name="text_message_sent">Sent a message</string>
    <string name="text_report_submitted_at">Submitted at %s</string>

    <string name="title_about">About this app</string>
    <string name="title_attendances">Attendances</string>
    <string name="title_course_contents">Course contents</string>
    <string name="title_course_details">Course details</string>
    <string name="title_course_summary">Course summary</string>
    <string name="title_forums">Forums</string>
    <string name="title_information">Information from ITC-LMS</string>
    <string name="title_materials">Materials</string>
    <string name="title_messages">Messages</string>
    <string name="title_notifies">Notifies</string>
    <string name="title_online_info">Online course information</string>
    <string name="title_report_fed_back_by">Teacher</string>
    <string name="title_report_feedback">Feedback</string>
    <string name="title_report_feedback_comment">Comment</string>
    <string name="title_report_feedback_score">Score</string>
    <string name="title_report_submit_files">Submit files</string>
    <string name="title_report_submit_text">Submit text</string>
    <string name="title_reports">Reports</string>
    <string name="title_settings">Settings</string>
    <string name="title_surveys">Surveys</string>
    <string name="title_teachers_name">Teachers</string>
    <string name="title_tests">Tests</string>
    <string name="title_task_file_download">Worker: File download</string>
    <string name="title_task_manager">Task Manager</string>
    <string name="title_task_pull_updates">Worker: Pull updates</string>

    <string name="toast_already_fetching">Already fetching another content.</string>
    <string name="toast_notify_not_found">Requested notify not found.</string>

    <string name="notify_name_downloads">Downloads</string>
    <string name="notify_desc_downloads">Notification about downloading files</string>
    <string name="notify_text_downloading">Downloading file…</string>
    <string name="notify_text_downloaded">Download completed</string>
    <string name="notify_name_errors">Errors</string>
    <string name="notify_desc_errors">Errors happened while processing</string>
    <string name="notify_title_session_expired">LMS session is expired</string>
    <string name="notify_text_request_login">Please re-login to ITC-LMS by clicking this notification.</string>
    <string name="notify_title_wrong_credentials">Given username/password is wrong</string>
    <string name="notify_text_wrong_credentials">Please fix them on preferences by clicking this notification.</string>
    <string name="notify_title_permission_required">Required permission is not granted</string>
    <string name="notify_text_request_permission">Please grant permission by clicking this notification and retry.</string>
    <string name="notify_name_lms_updates">Updates</string>
    <string name="notify_desc_lms_updates">Unread updates from ITC-LMS</string>

    <string name="text_permission_used_to">Will be used to</string>
    <string name="button_grant_permission">Grant permission</string>
    <string name="text_permission_name_write_external_storage">Access to storage</string>
    <string name="text_permission_usage_write_external_storage">* Download attachment files to the storage</string>

</resources>
