<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionOpenTaskManager"
        android:icon="@drawable/ic_update"
        android:title="@string/title_task_manager"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionLmsInformation"
        android:icon="@drawable/ic_info"
        android:title="@string/title_information"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionOpenInBrowser"
        android:icon="@drawable/ic_open_in_browser"
        android:title="@string/menu_open_in_browser"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionCopyUrl"
        android:icon="@drawable/ic_copy"
        android:title="@string/menu_copy_url"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionShareUrl"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share_url"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionDownload"
        android:icon="@drawable/ic_download"
        android:title="@string/menu_download"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionFlush"
        android:icon="@drawable/ic_delete"
        android:title="@string/menu_flush_tasks"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/openAbout"
        android:icon="@drawable/ic_info"
        android:title="@string/title_about"
        app:showAsAction="never" />

</menu>
